--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 00:05:02 2018</p>
+         Last Run: Sat Dec  1 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -32,11 +32,11 @@
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-3</td>
-                        <td>-8</td>
-                        <td>53</td>
-                        <td>82</td>
+                        <td>-7</td>
+                        <td>52</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>N</td>
                         <td>100</td>
                      </tr>
@@ -45,7 +45,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>79</td>
                         <td>0</td>
                         <td>13</td>
@@ -57,10 +57,10 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>54</td>
-                        <td>82</td>
+                        <td>52</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>N</td>
                         <td>100</td>
                      </tr>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-7",
                  "-8",
                  "-8"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "50",
-                 "54"
+                 "52",
+                 "49",
+                 "52"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "81",
                  "79",
-                 "82"
+                 "81"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 00:05:02 2018</p>
+         Last Run: Sat Dec  1 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>34</td>
-                        <td>81</td>
+                        <td>37</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -270,14 +270,14 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>-4</td>
-                        <td>-9</td>
-                        <td>15</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>22</td>
                         <td>73</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "-9",
                  "-9",
-                 "-9"
+                 "-8"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
+                 "37",
                  "24",
-                 "15"
+                 "22"
                ]
              },
              {
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
+                 "82",
                  "77",
                  "73"
                ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
                  "94",
-                 "89"
+                 "94",
+                 "88"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 00:05:02 2018</p>
+         Last Run: Sat Dec  1 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-10</td>
-                        <td>-10</td>
+                        <td>Clear</td>
+                        <td>-11</td>
+                        <td>-11</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>5</td>
-                        <td>WSW</td>
-                        <td>49</td>
+                        <td>SW</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-12</td>
+                        <td>-16</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>27</td>
+                        <td>SW</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
-                        <td>7</td>
-                        <td>82</td>
+                        <td>-12</td>
+                        <td>-16</td>
+                        <td>6</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>13</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
-                 "-14",
-                 "-15"
+                 "-11",
+                 "-16",
+                 "-16"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
-                 "-10",
-                 "-11"
+                 "-11",
+                 "-12",
+                 "-12"
                ]
              }
            ]
@@ -592,7 +592,7 @@
                "data":[
                  "7",
                  "7",
-                 "7"
+                 "6"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "81",
-                 "82"
+                 "83",
+                 "83",
+                 "85"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "27",
-                 "13"
+                 "28",
+                 "21",
+                 "15"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 00:05:02 2018</p>
+         Last Run: Sat Dec  1 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,22 +679,22 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>11</td>
+                        <td>SW</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-13</td>
-                        <td>-18</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>5</td>
                      </tr>
                      <tr>
@@ -703,7 +703,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-18",
-                 "-18",
+                 "-19",
                  "-19"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-13",
-                 "-13",
+                 "-14",
                  "-14"
                ]
              }
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "81",
-                 "83"
+                 "78",
+                 "77",
+                 "82"
                ]
              },
              {
@@ -827,7 +827,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
+                 "10",
                  "5",
                  "2"
                ]
