--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 01:05:02 2018</p>
+         Last Run: Sat Dec  1 02:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>52</td>
-                        <td>81</td>
+                        <td>55</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -45,8 +45,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>49</td>
-                        <td>79</td>
+                        <td>55</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -57,7 +57,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>81</td>
                         <td>0</td>
                         <td>13</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "52",
-                 "49",
-                 "52"
+                 "55",
+                 "55",
+                 "54"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "79",
+                 "82",
+                 "80",
                  "81"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 01:05:02 2018</p>
+         Last Run: Sat Dec  1 02:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>37</td>
+                        <td>35</td>
                         <td>82</td>
                         <td>0</td>
                         <td>14</td>
@@ -272,7 +272,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>22</td>
+                        <td>20</td>
                         <td>73</td>
                         <td>0</td>
                         <td>14</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
+                 "35",
                  "24",
-                 "22"
+                 "20"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 01:05:02 2018</p>
+         Last Run: Sat Dec  1 02:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -488,7 +488,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -603,7 +603,7 @@
                "data":[
                  "83",
                  "83",
-                 "85"
+                 "86"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 01:05:02 2018</p>
+         Last Run: Sat Dec  1 02:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -678,35 +678,35 @@
                         <td>Clear</td>
                         <td>-13</td>
                         <td>-18</td>
-                        <td>5</td>
-                        <td>78</td>
+                        <td>6</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>10</td>
+                        <td>SSW</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>6</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>5</td>
+                        <td>SSW</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>5</td>
-                        <td>82</td>
+                        <td>6</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>SSW</td>
                         <td>2</td>
                      </tr>
                   </tbody>
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "77",
-                 "82"
+                 "79",
+                 "80",
+                 "85"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "5",
+                 "3",
+                 "2",
                  "2"
                ]
              }
