--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 02:05:08 2018</p>
+         Last Run: Sat Dec  1 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>82</td>
                         <td>0</td>
                         <td>11</td>
@@ -43,10 +43,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-8</td>
-                        <td>55</td>
-                        <td>80</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>56</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -57,7 +57,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>54</td>
+                        <td>58</td>
                         <td>81</td>
                         <td>0</td>
                         <td>13</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-8",
+                 "-6",
                  "-8"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-2",
                  "-3"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "55",
-                 "55",
-                 "54"
+                 "56",
+                 "56",
+                 "58"
                ]
              },
              {
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "82",
-                 "80",
+                 "79",
                  "81"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 02:05:08 2018</p>
+         Last Run: Sat Dec  1 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>88</td>
+                        <td>93</td>
                      </tr>
                   </tbody>
                </table>
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "95",
                  "94",
-                 "94",
-                 "88"
+                 "93"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 02:05:08 2018</p>
+         Last Run: Sat Dec  1 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,7 +460,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-11</td>
                         <td>-11</td>
                         <td>7</td>
@@ -468,7 +468,7 @@
                         <td>0</td>
                         <td>5</td>
                         <td>SW</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>7</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>21</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>15</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "83",
+                 "84",
                  "86"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "21",
-                 "15"
+                 "30",
+                 "23",
+                 "17"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 02:05:08 2018</p>
+         Last Run: Sat Dec  1 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "78",
                  "80",
                  "85"
                ]
